<resources>
    <string name="app_name">Test 2022</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="your_name">Your Name</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="my_action_bar">My Action Bar</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="third_screen">Third Screen</string>
    <string name="second_screen">Second Screen</string>
</resources>