<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.firstscreen.FirstActivity"
    android:background="@drawable/background_first">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:background="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline2"
            android:contentDescription="@string/add" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="56dp"
            android:autofillHints="name"
            android:background="@drawable/blue_border_rounded_corner"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingVertical="8dp"
            android:paddingStart="17dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editText_palindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Palindrome"
            android:background="@drawable/blue_border_rounded_corner"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/palindrome"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="8dp"
            android:paddingStart="17dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <Button
            android:id="@+id/button_check"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/blue_border_rounded_corner"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/check"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_palindrome" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/blue_border_rounded_corner"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_check" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>