<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:src="@drawable/placeholder_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:paddingHorizontal="2sp"
        android:layout_marginStart="20dp"
        android:text="@string/firstname"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:text="@string/lastname"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="2sp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textFirstname"
        app:layout_constraintStart_toEndOf="@+id/textFirstname"
        app:layout_constraintTop_toTopOf="@+id/textFirstname" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="2sp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/textFirstname"
        app:layout_constraintTop_toBottomOf="@+id/textFirstname" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#90989898"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>